--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP"></script>
   <script type="text/javascript">
     function googleTranslateElementInit() {
-      new google.translate.TranslateElement({ pageLanguage: 'en', includedLanguages: 'ar,en,es,jv,ko,pa,pt,ru,zh-CN', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, autoDisplay: false }, 'google_translate_element')
+      new google.translate.TranslateElement({ pageLanguage: 'en', includedLanguages: 'jv,de,fr,en,es,ko,sv,ru,zh-CN,ja', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, autoDisplay: false }, 'google_translate_element')
     }
   </script>
   <!-- <script type="text/javascript"
