font and black bar

--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Lyric Searching App</title>
+    <script
+      type="text/javascript"
+      src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP"
+    ></script>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Lyric Searching App</title>
-  <script type="text/javascript" src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP"></script>
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <title>Lyric Searching App</title>
-  <script type="text/javascript" src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP"></script>
-  <script type="text/javascript">
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({ pageLanguage: 'en', includedLanguages: 'jv,de,fr,en,es,ko,sv,ru,zh-CN,ja', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, autoDisplay: false }, 'google_translate_element')
-    }
-  </script>
-  <!-- <script type="text/javascript"
+    <title>Lyric Searching App</title>
+    <script
+      type="text/javascript"
+      src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP"
+    ></script>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          {
+            pageLanguage: "en",
+            includedLanguages: "jv,de,fr,en,es,ko,sv,ru,zh-CN,ja",
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+            autoDisplay: false
+          },
+          "google_translate_element"
+        );
+      }
+    </script>
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800");
+    </style>
+    <!-- <script type="text/javascript"
     src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
+  </head>
 
+  <body>
+    <!-- <div id="google_translate_element">translate test</div> -->
 
+    <div id="root" class="notranslate"></div>
+  </body>
 
-
-</head>
-
-<body>
-
-
-  <!-- <div id="google_translate_element">translate test</div> -->
-
-  <div id="root" class="notranslate"></div>
-
-</body>
-
-<!-- <script type="text/javascript">
+  <!-- <script type="text/javascript">
   function googleTranslateElementInit() {
     new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
   }
@@ -49,6 +64,4 @@
   //   });
   // }
 </script> -->
-
-
 </html>
