enable all the languages

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       new google.translate.TranslateElement(
         {
           pageLanguage: "en",
-          includedLanguages: "jv,de,fr,en,es,ko,sv,ru,zh-CN,ja",
+          // includedLanguages: "jv,de,fr,en,es,ko,sv,ru,zh-CN,ja",
           layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
           autoDisplay: false,
 
@@ -29,11 +29,8 @@
 
 
       );
-
-
-
-
     }
+
   </script>
   <style>
     @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800");
